--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "lodash.difference": "^4.5.0",
+    "popper.js": "^1.14.3",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
